apps/quay/base/deployment-quay-health.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-health-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quay-health-monitor
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: quay-health-monitor
        version: v1
    spec:
      containers:
        - image: localhost/quay-health-monitor:latest
          imagePullPolicy: IfNotPresent
          name: quay-health-monitor
      dnsPolicy: ClusterFirst
      restartPolicy: Always
