apps/quay/base/deployment-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: Quay
    app: postgres
  name: postgres
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: postgres
        deployment: postgres
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: quay
        - name: POSTGRESQL_PASSWORD
          value: quay
        - name: POSTGRESQL_DATABASE
          value: quay
        - name: POSTGRESQL_MASTER_USER
          value: admin
        - name: POSTGRESQL_MASTER_PASSWORD
          value: changeme
        image: localhost/postgresql-10:1-157
        imagePullPolicy: IfNotPresent
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5
        volumeMounts:
        - mountPath: /var/lib/pgsql
          name: pvc-pq
        - mountPath: /usr/share/container-scripts/postgresql/start/extension.sh
          name: pg-extension
          subPath: extension.sh
        - mountPath: /usr/share/container-scripts/postgresql/openshift-custom-postgresql.conf.template
          name: pg-conf-template
          subPath: openshift-custom-postgresql.conf.template
      serviceAccount: postgres
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: pvc-pq
        persistentVolumeClaim:
          claimName: pvc-pq
      - name: pg-extension
        configMap:
          items:
          - key: extension.sh
            path: extension.sh
          defaultMode: 0755
          name: pg-extension
      - name: pg-conf-template
        configMap:
          items:
          - key: openshift-custom-postgresql.conf.template
            path: openshift-custom-postgresql.conf.template
          defaultMode: 0755
          name: pg-conf-template
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: postgres
  name: postgres
spec:
  ports:
  - name: tcp-5432
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
status:
  loadBalancer: {}
