apps/quay/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: quay
spec:
  rules:
  - host: quay.example.com
    http:
      paths:
      - backend:
          service:
            name: quay
            port:
              number: 9091
        path: /metrics
        pathType: Prefix
      - backend:
          service:
            name: quay
            port:
              number: 8080
        path: /
        pathType: Prefix
